Adminsayfasi formuna yeni bileşenler ve işlevler eklendi
- Yeni bileşenler eklendi: `ımageList1`, `backgroundWorker1`, `groupBox2`, `dataGridView2`, ve çeşitli butonlar ve metin kutuları.
- Bazı bileşenler kaldırıldı: `maskedTextBox1`, `ımageList1`, `txt_kullaniciadi`, `label8`.
- Mevcut bileşenlerin özellikleri değiştirildi: `groupBox1`, `btn_temizle`, `btn_guncelle`, `btn_sil`, `btn_ekle`, `txt_yetki`, `label6`, `txt_sifre`, `label5`, `label4`, `label3`, `label2`, `label1`, `label7`, `dataGridView1`.
- Yeni bir `label9` etiketi eklendi ve özellikleri ayarlandı.
- `Adminsayfasi` formunun boyutu değiştirildi ve yeni eklenen kontroller forma eklendi.
- `List<Kitap> kitaplarim` adlı yeni bir liste ve bu listeyi parametre olarak alan yeni bir kurucu metot eklendi.
- `Adminsayfasi_Load` olayında, `kitaplarim` listesindeki kitapların `dataGridView2`'ye eklenmesi için yeni bir döngü eklendi.
- Yeni buton olayları (`btn_kitapekle_Click`, `btn_kitapsil_Click`, `btn_kitapguncelle_Click`, `btn_kitaptemizle_Click`) eklendi.
- `dataGridView2_CellClick` olayı eklendi.
- `Adminsayfasi.resx` dosyasına yeni metadata ve veri eklemeleri yapıldı.
- `Adminsayfasi.resx` dosyasındaki `$this.TrayHeight` metadata değeri `25`'ten `83`'e değiştirildi.
- `Form1.cs` dosyasına `List<Kitap> kitaplarim` adlı bir liste eklendi ve `Form1_Load` metodunda bu listeye bazı kitaplar eklendi.
- `Kutuphane_giris.csproj` dosyasına `Entity\Kitap.cs` dosyası eklendi.
- `Kitap.cs` adlı yeni bir dosya eklendi ve bu dosyada `Kitap` sınıfı tanımlandı.

--- a/Kutuphane_giris/Adminsayfasi.resx
+++ b/Kutuphane_giris/Adminsayfasi.resx
@@ -117,6 +117,96 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ımageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>591, 28</value>
+  </metadata>
+  <data name="ımageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACC
+        EgAAAk1TRnQBSQFMAgEBBAEAARABAAEQAQABKAEAASgBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABoAMAAVADAAEBAQABCAYAATIYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8A/wD/AP8A
+        /wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AJwAB/wH0AQgBlwJVAjMCVQGXAQgB9AH/
+        PAAB8wEWAf8UAAH/ARYB8woAAfQBCAGXHFUBlwEIAfQOAAH/AQgBVQwzAVUBCAH/OQAB8wL5AeMB/xIA
+        Af8B4wL5AfMHAAH/AQgiVQEIAf8KAAH/AZgSMwGYAf82AAHzBPkB4wH/EAAB/wHjBPkB8wYAAQgkVQEI
+        CQAB8QFVFDMBVQHxNAAB8wb5AeMB/w4AAf8B4wb5AfMEAAH0JlUB9AYAAf8BmAszAlULMwGYAf8cAAG8
+        FAAB8wj5AeMB/wwAAf8B4wj5AfMDAAEIJlUBCAUAAf8BlwszAcIC/wHCCzMBlwH/GAABFRYAAfMK+QHj
+        Af8KAAH/AeMK+QHzAgABlyZVAZcEAAH/AZcLMwGYBP8BmAszAZcB/y0AAfMM+QHjAf8IAAH/AeMM+QHz
+        AQATlwKYE5cEAAGYDDMBCAT/AQgMMwGYEwAB6wkAAeoOAAHzDvkB4wH/BgAB/wHjDvkB8w+XAQgB9Ab/
+        AfQBCA+XAwAB8Q0zAQgE/wEIDTMB8RcAAfMTAAEWD/kB4wH/BAAB/wHjD/kBFg2XAQgM/wEIDZcCAAH/
+        AVUNMwEIBP8BCA0zAVUB/w4AAUMFAAH/FQAB/wHjD/kB4wH/AgAB/wHjD/kB4wH/C5cBmBD/AZgLlwIA
+        AZgOMwEIBP8BCA4zAZgQAAESGgAB/wHjD/kB4wL/AeMP+QHjAf8BAAqXAZgF/wEIAZgElwGYAQgF/wGY
+        CpcBAAH/DzMBCAT/AQgPMwH/KwAB/wHjD/kC4w/5AeMB/wIACpcBGwP/AQgKlwHCBP8BmAmXAQABCA8z
+        AQgE/wEIDzMBCAkAAfMiAAH/AeMe+QHjAf8DAAqXAQgC/wGYDJcBmAT/CZcB/wFVDzMBCAT/AQgPMwFV
+        Af8HAAHxAgABExEAAfEPAAH/AeMc+QHjAf8EAAuXAZgPlwGYA/8BCAiXAfQQMwEIBP8BCBAzAfQJAAG8
+        EAAB/xIAAf8B4xr5AeMB/wUAHJcBwgP/CJcBCBAzAQgE/wEIEDMBCAoAAesjAAH/AeMY+QHjAf8GAB2X
+        A/8BCAiXEDMBCAT/AQgQMwGXHQABDxEAAf8B4xb5AeMB/wcACJcBmBOXAZgBwgL/AfQBlwGYAZ0ElwFV
+        BTMBmAoIAfME/wHzCggBmAUzAVUaAAEOFQAB/wHjFPkB4wH/CAAGlwGYAv8BGxGXBv8BCAL/AZgDlwFV
+        BDMBwhz/AcIEMwFVDAABEgcAARUcAAH/AeMS+QHjAf8JAAWXAZgE/wEbD5cBmAn/AQgDlwQzAVUe/wFV
+        BDMSAAHsHwAB/wHjEPkB4wH/CgAElwGYBv8BGw+XARsI/wGYA5cEMwFVHv8BVQQzBwAB/yoAAf8B4xD5
+        AeMB/woAA5cBmAj/ARsPlwEbBv8BmASXAVUEMwHCHP8BwgQzAVUxAAH/AeMS+QHjAf8JAAOXAQgJ/wGY
+        D5cBGwT/AZgFlwFVBTMBmAoIAfME/wHzCggBmAUzAVUaAAH/AgAB7xIAAf8B4xT5AeMB/wgAA5cBmAL/
+        AQgG/xGXARsC/wGYB5cQMwEIBP8BCBAzAZcVAAHyGQAB/wHjFvkB4wH/BwAElwKYAZcB9AL/AcIBmBOX
+        AZgIlwEIEDMBCAT/AQgQMwEIGwAB8AIAAf8PAAH/AeMY+QHjAf8GAAeXAQgD/x2XAfQQMwEIBP8BCBAz
+        AfQIAAHyAgAB8AgAAf8EAAHtAgAB9BAAAf8B4xr5AeMB/wUAB5cBmAP/AcIclwH/AVUPMwEIBP8BCA8z
+        AVUB/wkAAhQMAAH/BwAB8wwAAf8B4xz5AeMB/wQACJcBwgP/AQgOlwKYC5cBAAEIDzMBCAT/AQgPMwEI
+        GwABBwIAAf8NAAH/AeMe+QHjAf8DAAiXAZ0E/wEIDJcBngL/AQgKlwEAAf8PMwEIBP8BCA8zAf8hAAEH
+        CQAB/wHjD/kC4w/5AeMB/wIACZcBngT/AcIBnQmXAcID/wHzCpcCAAGYDjMBCAT/AQgOMwGYHQAB7Q0A
+        Af8B4w/5AeMC/wHjD/kB4wH/AQAKlwGeBf8BwgGeAZgClwGdAZ4BwgX/AZ4KlwIAAf8BVQ0zAQgE/wEI
+        DTMBVQH/IwABkgYAAf8B4w/5AeMB/wIAAf8B4w/5AeMB/wuXAZ4Q/wGeC5cDAAHxDTMBCAT/AQgNMwHx
+        HwABEgsAARYP+QHjAf8EAAH/AeMP+QEWDJcBmAHCDP8BwgGdDJcEAAGYDDMBCAT/AQgMMwGYIwAB/wgA
+        AfMO+QHjAf8GAAH/AeMO+QHzDpcBngHCAfQG/wH0AcIBng6XBAAB/wGXCzMBmAT/AZgLMwGXAf8lAAHw
+        BwAB8wz5AeMB/wgAAf8B4wz5AfMBABGXBp4RlwUAAf8BlwszAcIC/wHCCzMBlwH/LwAB8wr5AeMB/woA
+        Af8B4wr5AfMCAAGeJpcBngYAAf8BmAszAlULMwGYAf8kAAH/DAAB8wj5AeMB/wwAAf8B4wj5AfMDAAEI
+        JuQBCAgAAfEBVRQzAVUB8TQAAfMG+QHjAf8OAAH/AeMG+QHzBAAB9CbkAfQJAAH/AZgSMwGYAf82AAHz
+        BPkB4wH/EAAB/wHjBPkB8wYAAfEk5AHxDAAB/wEIAVUMMwFVAQgB/zkAAfMC+QHjAf8SAAH/AeMC+QHz
+        BwAB/wHxAcAg5AHAAcIB/w4AAf8B9AEIAZcCVQIzAlUBlwEIAfQB/zwAAfMBFgH/FAAB/wEWAfMKAAH/
+        AQgBnhzAAZ4BCAH0AwABQgFNAT4HAAE+AwABKAMAAaADAAFQAwABAQEAAQEFAAFAAQYWAAP//wD/AP8A
+        JAAB/wH4AQABHwb/Af4BPwH/AfwBfwHgAwABBwH/AeABAAEHBv8B/AEfAf8B+AE/AYADAAEBAf8BgAEA
+        AQEG/wH4AQ8B/wHwAR8BgAMAAQEB/wMABv8B8AEHAf8B4AEPBQAB/AMAAT8C/wH9Av8B4AEDAf8BwAEH
+        BQAB+AMAAR8C/wHgAv8BwAEBAf8BgAEDBQAB8AMAAQ8C/wGAAX8B/wGAAQAB/wEAAQEFAAHwAwABDwH/
+        Af4BDgE/Af8CAAF+BwAB4AMAAQcB/wH8AQcBPwH/AgABPAcAAcADAAEDAf8B8AHHAR8B/wIAARgHAAHA
+        AwABAwH/AeEB4wGfAf8BgAMAAQEFAAGAAwABAQH/AcEB9wGPAf8BwAMAAQMFAAGAAwABAQH/AQkB/wHP
+        Af8B4AMAAQcKAAH+AR8B/wHHAf8B8AMAAQ8KAAH+AT8B/wHHAf8B+AMAAR8KAAH+AR8B/wHHAf8B/AMA
+        AT8KAAH+AQcB/wEDAf8B/gMAAX8KAAH/AcEB/AETAv8DAAH/CgAB/wLwAXMC/wGAAQABAQH/CgAB+QH8
+        AUEB8wL/AcABAAEDAf8KAAHwAf4BBwHzAv8BwAEAAQMB/woAAfkB/wEfAfMC/wGAAQABAQH/CgAC/wGP
+        AcMC/wMAAf8KAAL/AcMBgwH/Af4DAAF/CgAB/wGfAeABAQH/AfwDAAE/CgAB/wEPAfABMQH/AfgDAAEf
+        CgAB/wGfAf4BOAH/AfADAAEPBQABgAMAAQED/wEYAf8B4AMAAQcFAAGAAwABAQP/AZwBfwHAAwABAwUA
+        AcADAAEDA/8BjgF/AYADAAEBBQABwAMAAQMD/wHOAT8CAAEYBwAB4AMAAQcD/wHHAT8CAAE8BwAB8AMA
+        AQ8D/wHmAT8CAAF+BwAB8AMAAQ8D/wHgAT8BgAEAAf8BAAEBBQAB+AMAAR8D/wHwAX8BwAEBAf8BgAED
+        BQAB/AMAAT8D/wH9Af8B4AEDAf8BwAEHBQAB/wMABv8B8AEHAf8B4AEPBQAB/wGAAQABAQb/AfgBDwH/
+        AfABHwGAAwABAQH/AeABAAEHBv8B/AEfAf8B+AE/AYADAAEBAf8B+AEAAR8G/wH+AT8B/wH8AX8B4AMA
+        AQcL
+</value>
+  </data>
   <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -162,7 +252,34 @@
   <metadata name="yeti.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="kitapid.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="kitapisim.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="kitapyazar.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="kitapdili.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="yayinevi.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="tur.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="sayfa.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="basimyili.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>297, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>25</value>
+    <value>83</value>
   </metadata>
 </root>
